--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<div app-header></div>
 <div app-banner id="banner"></div>
 <div>
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<div app-foote></div>
 <div class="">
     <div class="scroll-top">
         <i class="fa fa-angle-double-up" aria-hidden="true"></i>
