--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <router-outlet></router-outlet>
+<div id="loading" class="load">
+    <div class="img">
+        <img src="../assets/img/Rotate-Loading-Animation.gif" />
+    </div>
+</div>
