--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -568,3 +568,21 @@ button:focus{
 .dropdown-menu{
     border-radius: 0 !important;
 }
+.load{
+    position:absolute;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #222222;
+    z-index: 9999999999999999999999;
+    overflow: hidden; 
+}
+.load .img{
+    display: flex;
+    width: 100vh;
+    height: 100vh;
+    margin-left: 20px;
+    justify-content: space-around;
+    align-items: center;        
+}
